--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,16 @@
     <color name="colorPrimary">#6200EE</color>
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
+
+    <!-- Color Levels-->
+    <color name="Level1">#4A7BA7</color>
+    <color name="Level2">#04B4B3</color>
+    <color name="Level3">#10CAC9</color>
+    <color name="Level4">#F5A623</color>
+    <color name="Level5">#FF7D50</color>
+    <color name="Level6">#FC6644</color>
+    <color name="Level7">#E75F40</color>
+    <color name="Level8">#E13A20</color>
+    <color name="Level9">#D93218</color>
+    <color name="Level10">#C03823</color>
 </resources>
