--- a/app/src/main/res/layout/list_items.xml
+++ b/app/src/main/res/layout/list_items.xml
@@ -51,18 +51,25 @@
 
             <TextView
                 android:id="@+id/CaseID"
-                android:layout_width="72dp"
-                android:layout_height="21dp"
+                android:layout_width="36dp"
+                android:layout_height="36dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginLeft="8dp"
                 android:layout_marginTop="16dp"
                 android:layout_marginEnd="16dp"
                 android:layout_marginRight="16dp"
+                android:layout_marginBottom="8dp"
+                android:layout_gravity="center_vertical"
+                android:gravity="center"
+                android:fontFamily="sans-serif-medium"
+                android:textColor="@android:color/white"
                 android:background="@drawable/circles"
+                android:textSize="16sp"
+                tools:text="8.9"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/timeID"
-                app:layout_constraintTop_toTopOf="parent"
-                tools:text="Cases" />
+                app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
                 android:id="@+id/timeID"
